Fix div.code css to overflow:auto

--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ div.code {
     font-size: 1.5em;
     background-color: #f0f0f0;
     padding: 20px;
-    margin-left: 20px;
+    overflow:auto
 }
 
 div.explanation {
